--- a/5/.vscode/extensions.json
+++ b/5/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "bianxianyang.htmlplay"
+        "bianxianyang.htmlplay",
+        "carbonid1.emmet-jss"
     ]
 }
