--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,50 +2,118 @@
     "cSpell.words": [
         "Аппартаменты",
         "Арефьева",
+        "Аризоне",
+        "аттракцион",
         "Бассейн",
+        "бойскаутское",
+        "большего",
+        "великолепный",
+        "Видеохостинг",
         "Вторая",
+        "Главная",
         "главной",
         "главную",
+        "город",
         "городе",
         "городка",
+        "городок",
         "гостиниц",
         "Гостиница",
         "Гостиницы",
+        "Гранд",
+        "Двухзвездочный",
+        "дешевые",
+        "Добро",
+        "дорогие",
+        "достопримечательности",
         "жилья",
+        "заслуживающий",
         "Избранное",
+        "информация",
         "Инфраструктура",
+        "Каньон",
+        "Контакте",
+        "которым",
+        "круче",
         "Логотип",
+        "маркированный",
         "Меню",
+        "Мессенджер",
         "Мотель",
         "Навигация",
+        "Найдено",
+        "настоящего",
+        "Настоящий",
+        "нашедших",
         "небо",
+        "небольшой",
+        "никакого",
+        "ночное",
+        "нужных",
+        "окрестностях",
         "Оксана",
         "отелей",
         "отель",
         "Парковка",
         "Первая",
+        "плитками",
+        "Подписаться",
+        "Подпишитесь",
         "Подробнее",
+        "пожаловать",
         "Поиск",
         "поиска",
         "Поисковые",
+        "полезная",
+        "полей",
+        "популярные",
+        "Предыдущая",
         "Применить",
+        "причины",
         "производства",
         "разработчик",
+        "Рассмотрим",
+        "рассылка",
+        "рассылку",
+        "Результат",
+        "результатов",
         "Рейтинг",
+        "Российская",
         "сайта",
         "Сбросить",
+        "своя",
         "Седона",
         "Седоне",
         "Седоны",
         "секция",
+        "сеть",
+        "скалы",
+        "слайдами",
+        "Следующая",
+        "Сначала",
+        "Сортировка",
+        "социальная",
+        "спама",
         "список",
         "Стоимость",
+        "страница",
         "страницу",
         "страницы",
         "сюда",
+        "течёт",
+        "Только",
+        "Третья",
+        "Трехзвездочный",
+        "туристов",
         "Фавиконка",
+        "форма",
         "формы",
         "Хочу",
-        "Cайт"
-    ]
+        "честное",
+        "Четырехзвездочный",
+        "Cайт",
+        "Sedona",
+        "subsribe"
+    ],
+    "figma.autocompleteBlocks": true
 }
