--- a/5/.vscode/extensions.json
+++ b/5/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "bianxianyang.htmlplay",
-        "carbonid1.emmet-jss"
+        "carbonid1.emmet-jss",
+        "ms-ceintl.vscode-language-pack-ru"
     ]
 }
