--- a/5/.vscode/settings.json
+++ b/5/.vscode/settings.json
@@ -5,15 +5,21 @@
         "Аризоне",
         "аттракцион",
         "Бассейн",
+        "близко",
         "бойскаутское",
         "большего",
+        "Большинство",
+        "Бургер",
+        "Вегаса",
         "великолепный",
         "Видеохостинг",
+        "Всегда",
         "Вторая",
         "Главная",
         "главной",
         "главную",
         "город",
+        "города",
         "городе",
         "городка",
         "городок",
@@ -21,76 +27,137 @@
         "Гостиница",
         "Гостиницы",
         "Гранд",
+        "даты",
         "Двухзвездочный",
         "дешевые",
+        "добавить",
         "Добро",
+        "Домик",
+        "домов",
+        "дорога",
         "дорогие",
         "достопримечательности",
+        "Дьявола",
+        "едет",
+        "Если",
+        "есть",
+        "Ехать",
+        "жизнь",
+        "Жильё",
         "жилья",
+        "Заинтересовались",
+        "заказывайте",
+        "Закрыть",
         "заслуживающий",
         "Избранное",
         "информация",
         "Инфраструктура",
         "Каньон",
+        "качественное",
+        "кино",
+        "китайского",
+        "комфорте",
         "Контакте",
+        "Контент",
         "которым",
+        "Красивая",
+        "Красивый",
+        "крестик",
         "круче",
         "Логотип",
+        "лучшие",
+        "Мало",
         "маркированный",
         "Меню",
         "Мессенджер",
+        "местного",
+        "модального",
+        "модальное",
+        "можно",
+        "мост",
+        "моста",
+        "мотеле",
         "Мотель",
         "Навигация",
         "Найдено",
         "настоящего",
+        "настоящем",
         "Настоящий",
+        "находятся",
+        "Национальные",
         "нашедших",
         "небо",
+        "Небольшая",
         "небольшой",
+        "нему",
         "никакого",
         "ночное",
         "нужных",
+        "обслуживание",
+        "окна",
+        "окно",
         "окрестностях",
         "Оксана",
+        "Опытный",
+        "осмелитесь",
+        "отдохнуть",
         "отелей",
         "отель",
+        "Открыть",
+        "очень",
         "Парковка",
         "Первая",
+        "персонал",
         "плитками",
+        "площадь",
         "Подписаться",
         "Подпишитесь",
         "Подробнее",
+        "поездки",
         "пожаловать",
+        "пожить",
         "Поиск",
         "поиска",
         "Поисковые",
+        "покажем",
         "полезная",
         "полей",
         "популярные",
+        "предложения",
+        "предполагаемые",
         "Предыдущая",
+        "Приезжайте",
         "Применить",
         "причины",
         "производства",
+        "пройти",
+        "Пятая",
+        "разочаруетесь",
         "разработчик",
+        "разумеется",
         "Рассмотрим",
         "рассылка",
         "рассылку",
         "Результат",
         "результатов",
         "Рейтинг",
+        "Рекомендуем",
         "Российская",
         "сайта",
         "Сбросить",
         "своя",
         "Седона",
         "Седоне",
+        "Седону",
         "Седоны",
         "секция",
         "сеть",
         "скалы",
+        "скучно",
         "слайдами",
         "Следующая",
         "Сначала",
+        "совсем",
         "Сортировка",
         "социальная",
         "спама",
@@ -99,21 +166,37 @@
         "страница",
         "страницу",
         "страницы",
+        "Сувенир",
+        "Сувениры",
         "сюда",
         "течёт",
+        "толпится",
         "Только",
+        "топовый",
         "Третья",
         "Трехзвездочный",
         "туристов",
+        "Укажите",
+        "уюте",
+        "уютных",
         "Фавиконка",
+        "фирменный",
+        "флаги",
+        "фоне",
         "форма",
         "формы",
         "Хочу",
         "честное",
+        "Четвертая",
         "Четырехзвездочный",
+        "Amara",
         "Cайт",
+        "Diablo",
+        "mountans",
+        "ptsans",
         "Sedona",
-        "subsribe"
+        "subsribe",
+        "subtitul"
     ],
     "figma.autocompleteBlocks": true
 }
