Исправляет сетку. Исправляет header.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,12 +52,17 @@
         "Избранное",
         "информация",
         "Инфраструктура",
+        "Канал",
+        "каналы",
         "Каньон",
+        "каталог",
         "качественное",
         "кино",
         "китайского",
         "комфорте",
+        "Контакт",
         "Контакте",
+        "Контакты",
         "Контент",
         "которым",
         "Красивая",
@@ -65,6 +70,7 @@
         "крестик",
         "круче",
         "Логотип",
+        "Лучше",
         "лучшие",
         "Мало",
         "маркированный",
@@ -104,9 +110,11 @@
         "отелей",
         "отель",
         "Открыть",
+        "отправить",
         "очень",
         "Парковка",
         "Первая",
+        "Перейти",
         "персонал",
         "плитками",
         "площадь",
@@ -160,8 +168,10 @@
         "совсем",
         "Сортировка",
         "социальная",
+        "Социальные",
         "спама",
         "список",
+        "стиль",
         "Стоимость",
         "страница",
         "страницу",
@@ -191,7 +201,10 @@
         "Четырехзвездочный",
         "Amara",
         "Cайт",
+        "deafault",
         "Diablo",
+        "hearder",
+        "htmlacademy",
         "mountans",
         "ptsans",
         "Sedona",
